<resources>
    <string name="app_name">Jurassic Gains</string>
    <string name="pounds">LBS</string>
    <string name="hash">#</string>
    <string name="previous">PREVIOUS</string>
    <string name="reps">REPS</string>

    <string name="day1">DAY 1 - CHEST AND TRI\'S</string>
    <string name="day2">DAY 2 - BACK AND BI\'S</string>
    <string name="day3">DAY 3 - REST</string>
    <string name="day4">DAY 4 - LEGS</string>
    <string name="day5">DAY 5 - SHOULDERS</string>
    <string name="day6">DAY 6 - REST</string>
    <string name="day7">DAY 7 - REST</string>
    <string name="title_activity_email_password">EmailPasswordActivity</string>
    <string name="title_activity_login">Sign in</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in</string>
    <string name="action_sign_up">Sign up</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="title_activity_signup">Sign up</string>
</resources>
