<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    tools:context=".DayActivity">

    <LinearLayout
        android:id="@+id/day_layout"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical"
        android:paddingLeft="@dimen/activity_vertical_margin"
        android:paddingRight="@dimen/activity_vertical_margin">

        <TextView
            android:id="@+id/weekText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="10dp"
            android:paddingTop="10dp"
            android:textAlignment="center"
            android:textSize="40sp"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="horizontal">

            <CheckBox
                android:id="@+id/checkbox_day1"
                android:layout_width="wrap_content"
                android:layout_height="fill_parent"
                android:gravity="center"
                android:scaleX="1.3"
                android:scaleY="1.3" />

            <Button
                android:id="@+id/button_day1"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/day1"
                android:textSize="20sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="horizontal">

            <CheckBox
                android:id="@+id/checkbox_day2"
                android:layout_width="wrap_content"
                android:layout_height="fill_parent"
                android:gravity="center"
                android:scaleX="1.3"
                android:scaleY="1.3" />

            <Button
                android:id="@+id/button_day2"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/day2"
                android:textSize="20sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="horizontal">

            <CheckBox
                android:id="@+id/checkbox_day3"
                android:layout_width="wrap_content"
                android:layout_height="fill_parent"
                android:gravity="center"
                android:scaleX="1.3"
                android:scaleY="1.3" />

            <Button
                android:id="@+id/button_day3"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:textSize="20sp"
                android:text="@string/day3"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="horizontal">

            <CheckBox
                android:id="@+id/checkbox_day4"
                android:layout_width="wrap_content"
                android:layout_height="fill_parent"
                android:gravity="center"
                android:scaleX="1.3"
                android:scaleY="1.3" />

            <Button
                android:id="@+id/button_day4"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/day4"
                android:textSize="20sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="horizontal">

            <CheckBox
                android:id="@+id/checkbox_day5"
                android:layout_width="wrap_content"
                android:layout_height="fill_parent"
                android:gravity="center"
                android:scaleX="1.3"
                android:scaleY="1.3" />

            <Button
                android:id="@+id/button_day5"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/day5"
                android:textSize="20sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="horizontal">

            <CheckBox
                android:id="@+id/checkbox_day6"
                android:layout_width="wrap_content"
                android:layout_height="fill_parent"
                android:gravity="center"
                android:scaleX="1.3"
                android:scaleY="1.3" />

            <Button
                android:id="@+id/button_day6"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/day6"
                android:textSize="20sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="horizontal">

            <CheckBox
                android:id="@+id/checkbox_day7"
                android:layout_width="wrap_content"
                android:layout_height="fill_parent"
                android:gravity="center"
                android:scaleX="1.3"
                android:scaleY="1.3" />

            <Button
                android:id="@+id/button_day7"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/day7"
                android:textSize="20sp" />
        </LinearLayout>

    </LinearLayout>
</ScrollView>

